# CSCE435GroupProject

./: BitonicSort_thicket.ipynb  BitonicSort_thicket_2.ipynb  BubbleSort_thicket.ipynb  MergeSort_thicket.ipynb  Report.md  SampleSort_thicket.ipynb  SampleSort_thicket_2.ipynb  final_project_thicket.ipynb
MergeSort/mpi/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  merge_mpi  merge_mpi.cpp  mpi_merge.grace_job  output.9174310  output.9174311  output.9174323  output.9174324  output.9174335  output.9174336  output.9178068  output.9228473  output.9228486  output.9228487  output.9228545  output.9228609  output.9228618  output.9228619  output.9259562  output.9294679  output.9294680  output.9294681  output.9296120  output.9298509  output.9298510  output.9298511  output.9298512  output.9298513  output.9298514  output.9298515  output.9298516  output.9298700  output.9298702  output.9298704  output.9298707  output.9298709  output.9298711  (+51 more)
MergeSort/mpi/cali_recent/: p128-a1048576-tr.cali  p128-a16777216-tp.cali  p128-a16777216-ts.cali  p128-a4194304-tr.cali  p128-a65536-ta.cali  p128-a67108864-ta.cali  p128-a67108864-tp.cali  p16-a1048576-ta.cali  p16-a1048576-tr.cali  p16-a1048576-ts.cali  p16-a16777216-ts.cali  p16-a262144-tr.cali  p16-a262144-ts.cali  p16-a4194304-ta.cali  p16-a65536-ta.cali  p16-a65536-tr.cali  p16-a67108864-tp.cali  p16-a67108864-tr.cali  p2-a262144-ta.cali  p2-a262144-tp.cali  p2-a262144-tr.cali  p2-a262144-ts.cali  p2-a4194304-ta.cali  p2-a4194304-tp.cali  p2-a4194304-tr.cali  p2-a4194304-ts.cali  p2-a65536-ta.cali  p2-a65536-tp.cali  p2-a65536-tr.cali  p2-a65536-ts.cali  p256-a1048576-ta.cali  p256-a1048576-tp.cali  p256-a1048576-tr.cali  p256-a1048576-ts.cali  p256-a16777216-ta.cali  p256-a16777216-tp.cali  p256-a16777216-tr.cali  p256-a16777216-ts.cali  p256-a262144-ta.cali  p256-a262144-tp.cali  (+58 more)
MergeSort/mpi/cali_recent_2/: p128-a16777216-tp.cali  p128-a4194304-tp.cali  p128-a67108864-tp.cali  p128-a67108864-tr.cali  p128-a67108864-ts.cali
MergeSort/mpi/mpi_merge/: p128-a16777216-ta.cali  p128-a16777216-tp.cali  p128-a16777216-tr.cali  p128-a262144-ta.cali  p128-a262144-tp.cali  p128-a262144-tr.cali  p128-a262144-ts.cali  p128-a4194304-tp.cali  p128-a4194304-ts.cali  p128-a65536-ta.cali  p128-a65536-tr.cali  p128-a65536-ts.cali  (+90 more)
QuickSort/cuda/: CMakeCache.txt  CMakeLists.txt  quick_cuda.cu  quick_cuda.grace_job
SampleSort/cuda/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  output.9176063  output.9177327  output.9232495  sample.grace_job  sample_cuda  sample_cuda.cu  t128-v65536.cali  t2048-v16777216.cali  t4-v32.cali  t4096-v16777216.cali  t512-v32768.cali
(+3613 files in other folders)
